# gcp-healthcare-ml-case-study

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
cloudbuild/: cloudbuild-deploy.yaml  cloudbuild-train.yaml
config/: project.yaml
infra/terraform/: main.tf  outputs.tf  variables.tf
scripts/: generate_portfolio_image.py  run_local_demo.ps1  run_local_demo.sh  run_pipeline.sh  run_pipeline_ps.ps1
sql/: build_training_features.sql  create_prediction_log_table.sql
src/healthcare_ml/: __init__.py  settings.py
src/healthcare_ml/apis/: text_enrichment.py
src/healthcare_ml/data/: __init__.py  generate_synthetic.py  load_interaction_features_to_bigquery.py  load_to_bigquery.py
src/healthcare_ml/deploy/: __init__.py  deploy_endpoint.py
src/healthcare_ml/features/: __init__.py  build_feature_dataset.py  build_features.py
src/healthcare_ml/pipeline/: __init__.py  vertex_pipeline.py
src/healthcare_ml/prep/: prepare_interactions.py
src/healthcare_ml/serving/: __init__.py  app.py  predictor.py
src/healthcare_ml/training/: __init__.py  evaluate.py  train.py  train_local.py
tests/: test_generate_synthetic.py  test_monitoring.py  test_text_pipeline.py  test_training.py
